webinar: fix overflow

--- a/src/webinar.scss
+++ b/src/webinar.scss
@@ -87,8 +87,7 @@ article {
   display: grid;
   align-items: center;
   justify-content: center;
-  overflow-x: hidden;
-  overflow-y: visible;
+  overflow: hidden;
   padding: 0;
   text-align: center;
 
